footer spacing is nice; fixing misc spacing

--- a/css/main.css
+++ b/css/main.css
@@ -24,15 +24,21 @@ ol,ul {
 li,p {
   line-height: 1.5;
 }
-.Description {
+.MainDescription {
   font-size: 1rem;
   margin: auto;
   margin-top: 4%;
   margin-bottom: 5%;
 }
+.Description {
+  font-size: 1rem;
+  margin: auto;
+  margin-top: 3%;
+  margin-bottom: 5%;
+}
 .Names {
   margin-top: 1%;
-  margin-left: 10%;
+  margin-left: 15%;
 }
 /* ===========================
 Text - Header and Nav Bar
